--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /blog
 # Site settings
 title: Ideava Technologies
 email: mail@alperozturk.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Solutions for Mobile and Web Development"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -14,9 +14,9 @@ color:
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Alper Öztürk
   pic: 1
-  position: Lead Designer
+  position: CEO
   social:
     - title: twitter
       url: #
