--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ color:
 people:
 - name: Alper Öztürk
   pic: 1
-  position: CEO
+  position: Founder
   social:
     - title: twitter
       url: #
