--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://alperozturk.github.io/blog
-baseurl: /
+url: http://alperozturk.github.io/
+baseurl: /blog
 
 # Site settings
 title: Ideava Technologies
