--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://alperozturk.github.io
-baseurl: /blog
+url: 
+baseurl: http://alperozturk.github.io/blog
 
 # Site settings
 title: Ideava Technologies
