--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Mahlowerstr. 24, 12049
+  - line: Berlin, Germany
 
 # Build settings
 markdown: kramdown
