--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,11 @@ address:
 markdown: kramdown
 permalink: pretty
 
+collections:
+  redirects:
+    output: true
+    permalink: /:path/
+
 defaults:
   -
     scope:
