--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url:
 baseurl: http://alperozturk.github.io/blog
 
 # Site settings
-title: IDEAVA
+title: IDEAVA | CTO as a Service
 email: mail@alperozturk.com
 description: "Solutions for Mobile and Web Development"
 
