--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url:
 baseurl: http://alperozturk.github.io/blog/
 
 # Site settings
-title: IDEAVA | CTO as a Service
+title: IDEAVA
 email: mail@alperozturk.com
-description: "Solutions for Mobile and Web Development"
+description: "Solutions for Mobile and Web Development: Your Technical Co-founder"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
