--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url:
 baseurl: https://alperozturk.github.io/blog/
 
 # Site settings
-title: IDEAVA
+title: Design Sprint Agency in Berlin - IDEAVA
 email: mail@alperozturk.com
-description: "Solutions for Mobile and Web Development: Your Technical Co-founder"
+description: "We help you make better and faster product decisions using Google's 4-Day Design Sprint Process"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -12,40 +12,6 @@ color:
   secondary: fec503  
   secondary-dark: 333
 
-# Team names, titles and social links
-people:
-- name: Alper Öztürk
-  pic: 1
-  position: Founder
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: linkedin
-      url: #
-
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
